fix: spacings in table

--- a/client/src/components/Inventory/inventory.css
+++ b/client/src/components/Inventory/inventory.css
@@ -86,6 +86,8 @@
 /* END -----------Inventory filterby, search, add product button row */
 
 
+
+
 /* inventory items */
 .headings-and-table-container {
   font-size: .7em;
@@ -103,9 +105,8 @@ table {
   flex-direction: column;
   border: 1px solid #eee;
   border-radius: 5px;
-  overflow: hidden;
   margin-top: 20px;
-  max-width: 80vw;
+  max-width: 77vw;
   margin: auto;
 }
 
@@ -125,7 +126,9 @@ tr {
 .tr-header {
   background-color: #eee;
   border: none;
+  position: relative;
 }
+
 
 td {
   min-height: 56px;
@@ -143,11 +146,15 @@ fieldset {
   justify-content: center;
 }
 
+.heading-sku, .item-sku {
+  margin-left: 20px;
+}
+
 .heading-name, .item-name {
   flex: 1.5;
 }
 
-td.item-description, .heading-description {
+td.item-description, .heading-description, .input-description {
   flex: 2;
   margin: auto 20px;
 }
@@ -160,6 +167,10 @@ td.item-description {
   display: flex;
   justify-content: flex-start;
   width: 170px;
+}
+
+.heading-in-stock, .item-in-stock {
+  margin-left: 2vw;
 }
 
 .item-in-stock {
@@ -177,7 +188,7 @@ td.item-description {
 
 .dynamic-inputs {
   width: 40px;
-  text-align: right;
+  text-align: center;
   background: rgb(215, 215, 215);
   color: black;
   border-radius: 4px;
@@ -210,8 +221,13 @@ td.item-description {
 }
 
 #add-prod-td {
+  position: relative;
   flex: 0;
-  min-width: 50px;
+}
+
+.dropdown-icon {
+  position: absolute;
+  right: -1vw;
 }
 
 /* drag and drop */
